--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,15 @@ sudo: false
 language: go
 
 go:
-- 1.10.x
 - 1.11.x
 - tip
+
+env:
+  - GO111MODULE=on
+
+before_script:
+  - go get github.com/golangci/golangci-lint/cmd/golangci-lint
+  - go get -u github.com/prometheus/promu
 
 script:
   - make
