--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Check formatting
+      - name: Setup Codacy aligncheck
+        run: curl -L https://github.com/codacy/codacy-analysis-cli/archive/master.tar.gz \
+          | tar xvz \
+          cd codacy-analysis-cli-* \
+          && sudo make install
+
+      - name: Formatting
         run: go fmt ./...
 
       - name: Testing
