--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,10 +22,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Codacy aligncheck
-        run: curl -L https://github.com/codacy/codacy-analysis-cli/archive/master.tar.gz \
-          | tar xvz \
-          cd codacy-analysis-cli-* \
-          && sudo make install
+        run: |
+          curl -L https://github.com/codacy/codacy-analysis-cli/archive/master.tar.gz |
+          tar xvz cd codacy-analysis-cli-* && sudo make install
 
       - name: Formatting
         run: go fmt ./...
