--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Setup Codacy aligncheck
         run: |
           curl -L https://github.com/codacy/codacy-analysis-cli/archive/master.tar.gz | \
-          tar xvz cd codacy-analysis-cli-* && sudo make install
+          tar xvz && cd codacy-analysis-cli-* && sudo make install
 
       - name: Formatting
         run: go fmt ./...
