--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup Codacy aligncheck
+      - name: Setup Codacy Analyze Tool
         run: |
           curl -L https://github.com/codacy/codacy-analysis-cli/archive/master.tar.gz | \
           tar xvz && cd codacy-analysis-cli-* && sudo make install
@@ -31,3 +31,13 @@ jobs:
 
       - name: Testing
         run: go test -short ./...
+
+      - name: Run aligncheck
+        run: |
+          codacy-analysis-cli analyze --provider gh \
+          --username leroy-merlin-br \
+          --project logstash_exporter \
+          --tool aligncheck \
+          --allow-network \
+          --upload \
+          --verbose
