fix(ci): remove codacy cli artifacts
Signed-off-by: brunopadz <bpadz@protonmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,8 @@ jobs:
       - name: Setup Codacy Analyze Tool
         run: |
           curl -L https://github.com/codacy/codacy-analysis-cli/archive/master.tar.gz | \
-          tar xvz && cd codacy-analysis-cli-* && sudo make install
+          tar xvz && cd codacy-analysis-cli-* && sudo make install \
+          && cd .. && rm -rf master.* codacy-analysis-cli-*
 
       - name: Formatting
         run: go fmt ./...
