--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -6,14 +6,14 @@ on:
       - main
 
 jobs:
-  unit-testing:
+  code-analysis:
     name: "Code Analysis"
     runs-on: ubuntu-20.04
     steps:
       - name: Setup
         uses: actions/setup-go@v2
         with:
-          go-version: 1.13
+          go-version: 1.16
 
       - name: Checkout
         uses: actions/checkout@v2
